--- a/aspHiLoGame/css/StyleSheet.css
+++ b/aspHiLoGame/css/StyleSheet.css
@@ -12,16 +12,12 @@ h1 {
     font-weight: bold;
 }
 
-table {
-    border-collapse: collapse;
-    padding: 10px;
-}
-
 button {
     background-color: rebeccapurple;
     color: white;
     border: none;
     padding: 8px 16px;
+    border-radius: 10px;
 }
 
 #formContainer {
@@ -29,4 +25,70 @@ button {
     margin: auto;
     padding: 20px;
     text-align: center;
+}
+
+#winnerLabel {
+    font-size: 16px;
+    color: indianred;
+    font-weight: bold;
+}
+
+#playAgain {
+    margin-top: 20px;
+    font-size: 14px;
+    border-radius: 10px;
+}
+#red {
+    width: 900px;
+    height: 800px;
+    background-color: red;
+    margin-left: 400px;
+    border: red;
+    border-radius: 600px;
+}
+
+#green {
+    width: 800px;
+    height: 700px;
+    background-color: green;
+    margin-left: 50px;
+    margin-top: 50px;
+    border: green;
+    border-radius: 600px;
+}
+
+#blue {
+    width: 700px;
+    height: 600px;
+    background-color: blue;
+    margin-left: 50px;
+    margin-top: 50px;
+    border: blue;
+    border-radius: 600px;
+}
+
+#orange {
+    width: 600px;
+    height: 500px;
+    background-color: orange;
+    margin-left: 50px;
+    margin-top: 50px;
+    border: orange;
+    border-radius: 600px;
+}
+
+#winnerBody {
+    background-color: burlywood;
+    width: 100%;
+    height: 100%;
+}
+
+#red, #green, #blue, #orange {
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+#winnerForm {
+    height: stretch;
 }
