--- a/aspHiLoGame/css/StyleSheet.css
+++ b/aspHiLoGame/css/StyleSheet.css
@@ -1,8 +1,12 @@
-﻿body {
+﻿body, html {
     background-color: lightsteelblue;
     font-family: Arial, Helvetica, sans-serif;
     padding: 30px;
     align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -28,8 +32,8 @@ button {
 }
 
 #winnerLabel {
-    font-size: 16px;
-    color: indianred;
+    font-size: 24px;
+    color: purple;
     font-weight: bold;
 }
 
@@ -42,7 +46,7 @@ button {
     width: 900px;
     height: 800px;
     background-color: red;
-    margin-left: 400px;
+    margin-left: 350px;
     border: red;
     border-radius: 600px;
 }
@@ -53,6 +57,7 @@ button {
     background-color: green;
     margin-left: 50px;
     margin-top: 50px;
+    margin-bottom: 50px;
     border: green;
     border-radius: 600px;
 }
@@ -63,6 +68,7 @@ button {
     background-color: blue;
     margin-left: 50px;
     margin-top: 50px;
+    margin-bottom: 50px;
     border: blue;
     border-radius: 600px;
 }
@@ -73,6 +79,7 @@ button {
     background-color: orange;
     margin-left: 50px;
     margin-top: 50px;
+    margin-bottom: 50px;
     border: orange;
     border-radius: 600px;
 }
@@ -91,4 +98,11 @@ button {
 
 #winnerForm {
     height: stretch;
+}
+#backGround {
+    background-color: goldenrod;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
